--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "emailjs-com": "^2.4.0",
-    "passport": "^0.4.0",
     "bulma": "^0.8.0",
+    "emailjs-com": "^2.4.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "mongoose": "^5.7.8",
+    "passport": "^0.4.0",
     "react": "^16.11.0",
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.11.0",
