--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "project-3",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "emailjs-com": "^2.4.0",
     "bulma": "^0.8.0",
