--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "cd client && npm start",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore client/* \" \"npm run client\"",
+    "client": "cd client && npm run start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -31,5 +34,9 @@
   "bugs": {
     "url": "https://github.com/skyline6965/Project-3/issues"
   },
-  "homepage": "https://github.com/skyline6965/Project-3#readme"
+  "homepage": "https://github.com/skyline6965/Project-3#readme",
+  "devDependencies": {
+    "concurrently": "^5.0.0",
+    "nodemon": "^1.19.4"
+  }
 }
