--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "emailjs-com": "^2.4.0",
     "bulma": "^0.8.0",
+    "emailjs-com": "^2.4.0",
     "react": "^16.11.0",
+    "react-big-calendar": "^0.23.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
