--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.11.0",
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "win-node-env": "^0.4.0"
   },
