--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1",
     "win-node-env": "^0.4.0"
   },
   "scripts": {
