--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-3",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.19.0",
     "bulma": "^0.8.0",
@@ -14,7 +15,9 @@
     "react": "^16.11.0",
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "typescript": "^3.7.2",
     "win-node-env": "^0.4.0"
   },
   "scripts": {
