--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon server.js --ignore client/*\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild":"npm run build"
   },
   "repository": {
     "type": "git",
