--- a/package.json
+++ b/package.json
@@ -5,21 +5,24 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "bulma": "^0.8.0",
     "emailjs-com": "^2.4.0",
     "express": "^4.17.1",
+    "express-sessions": "^1.0.6",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
     "mongoose": "^5.7.8",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.11.0",
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "typescript": "^3.7.2",
     "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -28,7 +31,7 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild":"npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
