--- a/package.json
+++ b/package.json
@@ -5,22 +5,26 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bulma": "^0.8.0",
+    "cookie-parser": "^1.4.4",
     "emailjs-com": "^2.4.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
     "mongoose": "^5.7.8",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
     "react": "^16.11.0",
     "react-big-calendar": "^0.23.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "typescript": "^3.7.2",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
-    "win-node-env": "^0.4.0"
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
