--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "bulma": "^0.8.0",
     "emailjs-com": "^2.4.0",
     "express": "^4.17.1",
-    "express-sessions": "^1.0.6",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
     "moment": "^2.24.0",
     "mongoose": "^5.7.8",
     "passport": "^0.4.0",
-    "typescript": "^3.7.2",
-    "slick-carousel": "^1.8.1"
+    "passport-local": "^1.0.0",
+    "slick-carousel": "^1.8.1",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
