--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.7.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react-router-dom": "^5.1.2",
     "slick-carousel": "^1.8.1",
     "typescript": "^3.7.2"
   },
